<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".signup.view.SignupScreenFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signupToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/signup"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:titleTextColor="@color/white" />
    <ImageView
        android:id="@+id/signUpSvg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:src="@drawable/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/appname"
        android:textColor="@color/mineShaft"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpSvg" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="23dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/mineShaft"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEmailAddressLayout"
            android:layout_width="315dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/emailText"
            app:layout_constraintTop_toBottomOf="@+id/emailText"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_shape"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/enterYourEmail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@id/editTextPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="23dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/mineShaft"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAddressLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPasswordLayout"
            android:layout_width="315dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/passwordText"
            app:layout_constraintTop_toBottomOf="@+id/passwordText"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_shape"
                android:drawableStart="@drawable/passord_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/enterYourPassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusForward="@id/editTextConfirmPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirmPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="23dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/mineShaft"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editConfirmPasswordLayout"
            android:layout_width="315dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordText"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordText"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_shape"
                android:drawableStart="@drawable/passord_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/enterYourPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="315dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/whisper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmPasswordLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/app_compact_button_style"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/alreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="119dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/alreadyHaveAnAccount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/line_under_text_boulder"
            android:text="@string/login"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/alreadyHaveAnAccount"
            app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

        <ProgressBar
            android:id="@+id/signUpProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signupToolBar" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>