<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/loginToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/signin"
            app:titleTextAppearance="@style/ToolbarTitle"
            app:titleTextColor="@color/white" />

        <ImageView
            android:id="@+id/loginSvg"
            android:layout_width="168dp"
            android:layout_height="200dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/appname"
            android:textColor="@color/mineShaft"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginSvg" />

        <TextView
            android:id="@+id/emailTextLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="37dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/mineShaft"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEmailAddressLayoutLogin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/emailTextLogin"
            app:layout_constraintTop_toBottomOf="@+id/emailTextLogin"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailAddressLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_shape"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/enterYourEmail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@id/editTextPasswordLogin"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordTextLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="23dp"
            android:text="@string/password"
            android:textAlignment="center"
            android:textColor="@color/mineShaft"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmailAddressLayoutLogin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPasswordLayoutLogin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/passwordTextLogin"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextLogin"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_shape"
                android:drawableStart="@drawable/passord_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/enterYourPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/dividerLogin"
            android:layout_width="315dp"
            android:layout_height="1dp"
            android:layout_marginTop="48dp"
            android:background="@color/whisper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPasswordLayoutLogin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/app_compact_button_style"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerLogin" />

        <TextView
            android:id="@+id/dontHaveAnAccountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="106dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/dontHaveAnAccount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleIconBtn" />

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/line_under_text_boulder"
            android:text="@string/signup"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dontHaveAnAccountTextView"
            app:layout_constraintTop_toBottomOf="@+id/googleIconBtn" />

        <View
            android:id="@+id/divider3"
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/youCanConnectWithTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        <View
            android:id="@+id/divider4"
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/divider3"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/youCanConnectWithTextView"
            app:layout_constraintTop_toTopOf="@+id/divider3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/youCanConnectWithTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/youCanConnectWith"
            android:textColor="@color/boulder"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/divider4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/divider3"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        <ImageView
            android:id="@+id/googleIconBtn"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/google_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/loginGuestUserImgVie"
            app:layout_constraintTop_toBottomOf="@+id/youCanConnectWithTextView" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="468dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/loginToolBar" />

        <ImageView
            android:id="@+id/loginGuestUserImgVie"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/guest_user"
            app:layout_constraintEnd_toStartOf="@+id/googleIconBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youCanConnectWithTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
